# live_skypro

./: pyproject.toml
course_work_1/: course_work_1_solution.py  coursework_1.py  tasks.py  tasks_solution.py
lesson_2/: 2.py  2_hw_solution.py  2_solution.py
lesson_3/: 3.py  3_hw_solution.py  3_solution.py
lesson_4/: 4.py  4_homework_solution.py  4_solution.py
lesson_6/: lesson_6_tasks.py  lesson_6_tasks_solution.py  text.txt
lesson_6/lesson_6_hw/: test.py
lesson_6/lesson_6_hw_solution/: history.txt  lesson_6_solution.py
lesson_7/: lesson_7_tasks.py  lesson_7_tasks_solution.py
lesson_8/: lesson_8_tasks.py  lesson_8_tasks_solution.py
